<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hostes Helper</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="room">"Зал № "</string>
    <string name="table">"Столик № "</string>
    <string name="status">Статус</string>
    <string name="status_comment">I - занят / O - свободен</string>
    <string name="reserv">Резервирование</string>
    <string name="reserv_comment">Large Text</string>
    <color name="switsh_off">#f90202</color>
    <color name="switsh_on">#27ea00</color>
    <string name="setDateTime">Установить дату и время</string>
    <color name="fontColor1">#909090</color>
    <color name="fontWhite">#ffffff</color>
    <string name="swich_on">O</string>
    <string name="swich_off">I</string>

</resources>
